--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:background="@android:color/holo_blue_dark"/>
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/email1"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:layout_marginTop="150dp"
@@ -29,7 +29,7 @@
         android:textColor="@color/colorPrimaryDark"/>
 
     <EditText
-        android:id="@+id/pass"
+        android:id="@+id/passwd"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:drawableLeft="@drawable/ic_lock_black_24dp"
@@ -39,7 +39,7 @@
         android:inputType="textPassword"
         android:padding="8dp"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_below="@+id/email"
+        android:layout_below="@+id/email1"
 
         />
     <Button
@@ -50,18 +50,19 @@
         android:textColor="@color/colorPrimary"
         android:layout_marginTop="70dp"
         android:layout_marginLeft="50dp"
-        android:layout_below="@+id/pass"
-        android:onClick="login"
+        android:layout_below="@+id/passwd"
+
         />
     <Button
+        android:id="@+id/btn2"
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:text="Register"
         android:textColor="@color/colorPrimary"
         android:layout_marginTop="70dp"
         android:layout_marginLeft="180dp"
-        android:layout_below="@id/pass"
-        android:onClick="register"
+        android:layout_below="@id/passwd"
+
         />
 
 </RelativeLayout>
